--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,12 +1,9 @@
 <header class="header">
   <div class="header__container">
-    <div class="logo">
-    </div>
-
-    <nav>
-      <ul>
-        <li>Login</li>
-        <li>Register</li>
+    <nav class="header__auth">
+      <ul class="header__auth-menu">
+        <li><a routerLinkActive="active" routerLink="auth/register">Register</a></li>
+        <li><a routerLinkActive="active" routerLink="auth/login">Login</a></li>
       </ul>
     </nav>
   </div>
