--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
-<div>
-  <app-header></app-header>
+<div class="app-wrapper">
+  <div class="nav-content">
+    <app-nav-bar></app-nav-bar>
+  </div>
+  <div class="main-content">
+    <app-header></app-header>
 
-  <app-main>
-    <router-outlet></router-outlet>
-  </app-main>
+    <app-main>
+      <router-outlet></router-outlet>
+    </app-main>
 
-  <app-footer></app-footer>
+    <app-footer></app-footer>
+  </div>
 </div>
 
