--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,16 +4,15 @@
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+@import "styles/index";
+
 @include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$crm_service-primary: mat.define-palette(mat.$indigo-palette);
-$crm_service-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$crm_service-primary: mat.define-palette(mat.$orange-palette, 500, 200, 100);
+$crm_service-accent: mat.define-palette(mat.$pink-palette, 100, 100, 500);
 
 // The warn palette is optional (defaults to red).
 $crm_service-warn: mat.define-palette(mat.$red-palette);
@@ -34,8 +33,3 @@ $crm_service-theme: mat.define-light-theme((
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($crm_service-theme);
-
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
