--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="app-wrapper">
-  <div class="nav-content">
-    <app-nav-bar></app-nav-bar>
-  </div>
-  <div class="main-content">
+<!--  <div class="nav-content">-->
+<!--    <app-nav-bar></app-nav-bar>-->
+<!--  </div>-->
+  <div class="main-content-wrapper">
     <app-header></app-header>
 
     <app-main>
