--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,18 +1,11 @@
 <div class="register">
-  <h2>Login</h2>
-  <form [formGroup]="form">
+  <h2 class="text-center title">Login</h2>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <mat-label class="input-wrapper">
       Work Email
       <mat-form-field class="example-full-width input">
-        <input type="email" matInput formControlName="name" placeholder="Ex. pat@example.com">
-      </mat-form-field>
-    </mat-label>
-
-    <mat-label class="input-wrapper">
-      Name Company
-      <mat-form-field class="example-full-width input">
-        <input type="text" matInput formControlName="password" placeholder="gloria">
+        <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">
       </mat-form-field>
     </mat-label>
 
@@ -23,16 +16,17 @@
       </mat-form-field>
     </mat-label>
 
-    <mat-label class="input-wrapper">
-      Password repeat
-      <mat-form-field class="example-full-width input">
-        <input type="password" matInput formControlName="password" placeholder="*******">
-      </mat-form-field>
+    <mat-label >
+      Remember me
+      <input type="checkbox" formControlName="remember" placeholder="*******">
     </mat-label>
 
-    <button class="button">
-      Submit
-    </button>
+    <div>
+      <button type="submit" mat-flat-button [disabled]="form.invalid" class="mat-primary button">
+        Submit
+      </button>
+    </div>
+
   </form>
 
 </div>
