--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -26,3 +26,29 @@ a {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+
+h1, .h1 {
+  font-size: 34px;
+}
+
+h2, .h2 {
+  font-size: 30px;
+}
+
+h3, .h3 {
+  font-size: 26px;
+}
+
+h4, .h4 {
+  font-size: 22px;
+}
+
+h5, .h5 {
+  font-size: 18px;
+}
+
+
+
+.text-center {
+  text-align: center;
+}
