--- a/src/app/modules/auth/components/restore-password/restore-password.component.html
+++ b/src/app/modules/auth/components/restore-password/restore-password.component.html
@@ -1,1 +1,37 @@
-<p>restore-password works!</p>
+<div class="restore-password">
+  <h2 class="text-center title">Restore Password</h2>
+
+    <mat-label class="input-wrapper ">
+      Work Email
+      <mat-form-field class="example-full-width input">
+        <input type="email" matInput [formControl]="email" placeholder="Ex. pat@example.com">
+        @if (email.hasError('email')) {
+          <mat-error>Email <strong>invalid</strong></mat-error>
+        }
+        @if (email.hasError('required')) {
+          <mat-error>Email field must be <strong>required</strong></mat-error>
+        }
+      </mat-form-field>
+    </mat-label>
+
+    <button
+      type="submit"
+      mat-flat-button
+      class="mat-primary button"
+      [disabled]="email.invalid"
+      (click)="onSubmit()"
+    >
+      Submit
+    </button>
+
+  @if (false) {
+    <hr>
+
+    <div class="text-center">
+      <p>Plz submit you change password in email</p>
+      <p>Check you email</p>
+      <p>Thanks</p>
+    </div>
+  }
+</div>
+
