--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -1,3 +1,4 @@
+@import "../variables/colors";
 @import "materials/index";
 @import "button/button";
 * {
@@ -21,6 +22,11 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+  transition: 0.4s all ease;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,8 +53,32 @@ h5, .h5 {
   font-size: 18px;
 }
 
-
-
 .text-center {
   text-align: center;
+}
+
+input[type='checkbox'] {
+  appearance: none;
+  border: 2px solid $dark-grey;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  position: relative;
+
+  &:checked {
+    background: $light-grey;
+
+    &:after {
+      width: 100%;
+      height: 100%;
+      color: $dark-grey;
+      content: '\2714';
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      left: 0;
+    }
+  }
 }
