auth, styles,and start make api

--- a/src/app/modules/auth/components/reset-password-form/reset-password-form.component.html
+++ b/src/app/modules/auth/components/reset-password-form/reset-password-form.component.html
@@ -1,1 +1,36 @@
-<p>reset-password-form works!</p>
+@defer (when $auth | async) {
+  <div class="reset-password-form">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <mat-label class="input-wrapper">
+        Password
+        <mat-form-field class="example-full-width input">
+          <input type="password" matInput formControlName="password" placeholder="*******">
+
+          @if (form.get('company')?.hasError('required')) {
+            <mat-error>Company field must be <strong>required</strong></mat-error>
+          }
+        </mat-form-field>
+      </mat-label>
+
+      <mat-label class="input-wrapper">
+        Password repeat
+        <mat-form-field class="example-full-width input">
+          <input type="password" matInput formControlName="repeatPassword" placeholder="*******">
+
+          @if (form.get('repeatPassword')?.hasError('passwordMismatch')) {
+            <mat-error>Password must be <strong>match</strong></mat-error>
+          }
+          @if (form.get('repeatPassword')?.hasError('required')) {
+            <mat-error>Password must be <strong>required</strong></mat-error>
+          }
+        </mat-form-field>
+      </mat-label>
+
+      <button mat-flat-button [disabled]="form.invalid" class="mat-primary button">
+        Submit
+      </button>
+    </form>
+  </div>
+} @placeholder {
+  <app-preloader></app-preloader>
+}
