auth, finish connect api

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,10 +1,16 @@
 <header class="header">
   <div class="header__container">
     <nav class="header__auth">
+      @if (!authUser()) {
       <ul class="header__auth-menu">
         <li><a routerLinkActive="active" routerLink="auth/register">Register</a></li>
         <li><a routerLinkActive="active" routerLink="auth/login">Login</a></li>
       </ul>
+      } @else {
+        <ul>
+          <li (click)="logOut()"><a>logOut</a></li>
+        </ul>
+      }
     </nav>
   </div>
 </header>
