--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -2,26 +2,32 @@
   <div class="logo">
     <h1>CRM</h1>
   </div>
-  <nav>
-    <ul>
-      <li>Dashboard</li>
-      <li>Accounts</li>
-    </ul>
-  </nav>
+  <div class="nav-bar__route">
+    <nav>
+      <h6 class="nav-bar__route-title">Menu</h6>
+      <ul class="nav-bar__route-list">
+        <li><a><mat-icon svgIcon="grid"></mat-icon> Dashboard</a></li>
+        <li><a><mat-icon svgIcon="user"></mat-icon>Accounts</a></li>
+      </ul>
+    </nav>
 
-  <nav>
-    <ul>
-      <li>Contacts</li>
-      <li>Leads</li>
-      <li>Calender</li>
-    </ul>
-  </nav>
+    <nav>
+      <h6 class="nav-bar__route-title">Leads</h6>
+      <ul class="nav-bar__route-list">
+        <li><a><mat-icon svgIcon="user-plus"></mat-icon>Contacts</a></li>
+        <li><a><mat-icon svgIcon="users-group"></mat-icon>Leads</a></li>
+        <li><a><mat-icon svgIcon="calendar"></mat-icon>Calender</a></li>
+      </ul>
+    </nav>
 
-  <nav>
-    <ul>
-      <li>Cases</li>
-      <li>Activities</li>
-      <li>Users</li>
-    </ul>
-  </nav>
+    <nav>
+      <h6 class="nav-bar__route-title">Cases</h6>
+      <ul class="nav-bar__route-list">
+        <li><a><mat-icon svgIcon="case"></mat-icon>Cases</a></li>
+        <li><a><mat-icon svgIcon="activity"></mat-icon>Activities</a></li>
+        <li><a><mat-icon svgIcon="user-check"></mat-icon>Users</a></li>
+      </ul>
+    </nav>
+  </div>
+
 </div>
