--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -7,8 +7,11 @@
         <li><a routerLinkActive="active" routerLink="auth/login">Login</a></li>
       </ul>
       } @else {
-        <ul>
-          <li (click)="logOut()"><a>logOut</a></li>
+        <ul class="header__user-panel">
+          <div class="header__avatar-user">
+            <img src="/assets/img/user-avatar.jpg" alt="">
+          </div>
+          <li (click)="logOut()"><a>Log-out</a></li>
         </ul>
       }
     </nav>
