--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -8,8 +8,43 @@
   align-items: center;
   padding: 0 30px;
 
+  .header__container {
+    width: 100%;
+  }
+
+  .header__auth {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
+
   &__auth-menu {
     display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  &__avatar-user {
+    background: grey;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 0 10px 2px #80808054;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      outline: 1px solid red;
+    }
+  }
+
+  &__user-panel {
+    gap: 20px;
+    display: flex;
+    align-items: center;
   }
 
   .active {
