--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -1,6 +1,7 @@
-@import "../variables/colors";
+@import "variables/colors";
 @import "materials/index";
 @import "button/button";
+
 * {
   box-sizing: border-box;
 }
