--- a/src/app/modules/profile/components/view-profile/view-profile.component.html
+++ b/src/app/modules/profile/components/view-profile/view-profile.component.html
@@ -5,7 +5,12 @@
     <div class="view-profile__img">
       <img [src]="user().avatar || '/assets/icons/user.svg'" alt="avatar">
     </div>
-    <input type="file" name="" id="">
+    <app-input-file  [formControl]="file"></app-input-file>
+
+    <p>    {{ imageSrc() }}
+    </p>
+
+    <button (click)="uploadImage()">upload img</button>
   </div>
   <div>
     <h3>Personal info</h3>
