validation, added logic for edit profile

--- a/src/app/modules/profile/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/profile/components/edit-profile/edit-profile.component.html
@@ -1,3 +1,44 @@
 <div class="edit-profile">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" >
+    <div class="edit-profile__grid">
+      <div class="edit-profile__img">
+        <img [src]="user().avatar || '/assets/icons/user.svg'" alt="avatar">
+      </div>
+      <app-input-file  formControlName="avatar"></app-input-file>
+
+      <mat-label class="input-wrapper">
+        Work Email
+        <mat-form-field class="example-full-width input">
+          <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">
+        </mat-form-field>
+      </mat-label>
+
+      <mat-label class="input-wrapper">
+        Company
+        <mat-form-field class="example-full-width input">
+          <input type="text" matInput formControlName="company" readonly placeholder="">
+        </mat-form-field>
+      </mat-label>
+
+      <mat-label class="input-wrapper">
+        Phone
+        <mat-form-field class="example-full-width input">
+          <input type="email" matInput formControlName="phone" placeholder="Ex. pat@example.com">
+        </mat-form-field>
+      </mat-label>
+
+      <mat-label class="input-wrapper">
+        Role
+        <mat-form-field class="example-full-width input">
+          <input type="text" readonly matInput formControlName="role" placeholder="Ex. pat@example.com">
+        </mat-form-field>
+      </mat-label>
+    </div>
+
+    <div class="btn-group">
+      <button mat-flat-button [disabled]="form.invalid"   class="mat-primary button" mat-button>Submit</button>
+    </div>
+  </form>
+
 
 </div>
