--- a/src/app/modules/profile/components/edit-profile/edit-profile.component.scss
+++ b/src/app/modules/profile/components/edit-profile/edit-profile.component.scss
@@ -1,13 +1,20 @@
 .edit-profile {
+  .edit-profile__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
+
   &__img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    gap: 16px;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 100px;
+      height: 100px;
+      border-radius: 100%;
+      object-fit: cover;
     }
   }
 }
