--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -4,3 +4,18 @@ $dark-light-grey: #9ea7c4;
 $blue: #2977f4;
 
 $dark-grey: #545c70;
+
+$themes: (
+  'pink': #ee5e99,
+  'purple' : #7f77f1,
+  'blue' : #1090e0,
+  'light-purple' : #b660e0,
+  'ocean-blue': #6985ff,
+  'orange' : #e16b16,
+  'blue-green' : #0f9d9f,
+  'brown': #aa8d80,
+  'grey': #595d66,
+  'green': #3db88b,
+);
+
+
