--- a/src/app/modules/users/add-users/add-users.component.html
+++ b/src/app/modules/users/add-users/add-users.component.html
@@ -1,1 +1,55 @@
-<p>add-users works!</p>
+<section class="add-user-section">
+
+<!--  <div class="edit-profile">-->
+<!--    <form [formGroup]="form" (ngSubmit)="onSubmit()" >-->
+<!--      <div class="edit-profile__grid">-->
+<!--        <div appDragDrop (drop)="fileInput.uploadImgArea($event)"  class="edit-profile__img">-->
+<!--          <img loading="lazy" [src]="user().avatar?.file_path || '/assets/icons/user.svg'" alt="avatar">-->
+<!--          <app-input-file  #fileInput formControlName="avatar"></app-input-file>-->
+
+<!--        </div>-->
+
+<!--        <mat-label class="input-wrapper">-->
+<!--          User name-->
+<!--          <mat-form-field class="example-full-width input">-->
+<!--            <input type="text" matInput formControlName="name" placeholder="Gloria / Ivan / other">-->
+<!--          </mat-form-field>-->
+<!--        </mat-label>-->
+
+<!--        <mat-label class="input-wrapper">-->
+<!--          Work Email-->
+<!--          <mat-form-field class="example-full-width input">-->
+<!--            <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">-->
+<!--          </mat-form-field>-->
+<!--        </mat-label>-->
+
+<!--        <mat-label class="input-wrapper">-->
+<!--          Company-->
+<!--          <mat-form-field class="example-full-width input">-->
+<!--            <input type="text" matInput formControlName="company" readonly placeholder="">-->
+<!--          </mat-form-field>-->
+<!--        </mat-label>-->
+
+<!--        <mat-label class="input-wrapper">-->
+<!--          Phone-->
+<!--          <mat-form-field class="example-full-width input">-->
+<!--            <input type="email" matInput formControlName="phone" placeholder="+1488228">-->
+<!--          </mat-form-field>-->
+<!--        </mat-label>-->
+
+<!--        <mat-label class="input-wrapper">-->
+<!--          Role-->
+<!--          <mat-form-field class="example-full-width input">-->
+<!--            <input type="text" readonly matInput formControlName="role" placeholder="Ex. pat@example.com">-->
+<!--          </mat-form-field>-->
+<!--        </mat-label>-->
+<!--      </div>-->
+
+<!--      <div class="btn-group">-->
+<!--        <button mat-flat-button [disabled]="form.invalid"   class="mat-primary button" mat-button>Submit</button>-->
+<!--      </div>-->
+<!--    </form>-->
+
+<!--  </div>-->
+
+</section>
