--- a/src/app/modules/users/users-dashboard/users-dashboard.component.scss
+++ b/src/app/modules/users/users-dashboard/users-dashboard.component.scss
@@ -75,6 +75,12 @@
       &:hover {
         background: $light-grey;
       }
+
+      &.edit-td {
+        &:hover {
+          background: unset;
+        }
+      }
     }
   }
 
